Refactor: Integrate structured CLI output parsing across providers